--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -294,21 +294,4 @@ unit.quell-missile.name = Quell Missile
 unit.scathe-missile.name = Scathe Missile
 team.neoplastic.name = Neoplastic
 
-ability.energyfield.maxtargets = [lightgray]Max targets: [white]{0}
-ability.energyfield.sametypehealmultiplier = [lightgray]Same-type heal: [white]{0}%
-bar.drilltierreq = Requires {0} drill tier (current: {1})
-block.armored-duct.name = Armored Duct
-block.large-shield-projector.name = Large Shield Projector
-rules.waitForWaveToEnd = Wait for wave to end [gray]Next wave starts after all enemies are defeated
-schematic.tagged = {0} tagged schematics
-unit.incite.name = Incite (T4)
-unit.obviate.name = Obviate (T5)
-unit.quell.name = Quell (T4)
-unit.disrupt.name = Disrupt (T5)
-ability.liquidregen = Liquid Regen
-database.patched = Modified by content pack
-rules.logicunitbuild = Allow logic-controlled unit building
-
-# Stylized translations (no need to localize in other languages)
-
-# hardcoded ui texts extracted from source
+# 学术特色翻译(无需翻译其他语言)
