🌐 抽离硬编码文本并按语义重构 bundle 键（对齐 #57 风格） (#97)
* 🌐 i18n 抽离硬编码文本并统一bundle键命名

* ♻️ i18n 根据review修正文案空格与英文表达

* ♻️ i18n 去除空格依赖并改为模板拼接

* ♻️ i18n 清理冗余键并统一模板格式

* ♻️ i18n 清理旧键并语义化部分UI文案键

* 🌐 i18n 优化 poke 提示英文文案

* 🌐 i18n 优化AT提示英文措辞

* 🌐 i18n 调整 poke 英文提示主语

* 🌐 i18n 优化部分英文文案一致性

* 🌐 i18n 清理英文bundle前导空格

* ♻️ i18n 函数化关键UI文案访问

* ♻️ i18n 关键文案改为函数硬编码

* ♻️ i18n 将 mdtx.ui 文案迁移到 bundles 函数

* ♻️ i18n 将 uiText 改为接口函数风格

* ♻️ i18n 改为对象化接口函数并移除包级函数

* ♻️ i18n 完全迁移 mdtx bundle 到 bundles 并统一回退链

* ♻️ i18n 移除中转层并将推荐/分享文案并入 UiText

* ♻️ i18n 推荐/分享文案改为直接调用 bundle 文本

* ♻️ i18n 回归Core.bundle单一文案源

* ♻️ i18n 按 usage 拆分文案纯函数并移除模板占位

* ♻️ i18n 改回接口化 bundle 并恢复默认 fallback

* ♻️ i18n 中文key接口化并内联UI格式化

* ♻️ i18n 静态化i并直写复杂文本函数

* ♻️ i18n 收紧 i() 常量边界并清理模板遗留键

* ♻️ i18n 按 review 合并入口并拆分英文实现

* ♻️ i18n 收敛 UiTextBundle 入口并内联简单文案

* ♻️ i18n 按 review 收敛 bundle 入口并清理冗余文案

* 🎨 clean

* 🎨 fixup

* 🎨 fixup

* 🎨 fixup

---------

Co-authored-by: DeterMination-Wind <DeterMination-Wind@users.noreply.github.com>
Co-authored-by: way-zer <himc.wicp@gmail.com>

--- a/assets/bundles/bundle-mdtx_en.properties
+++ b/assets/bundles/bundle-mdtx_en.properties
@@ -3,25 +3,11 @@ mods.group.mod = Mod
 mods.group.internal = Internal Mod
 mods.disabled = Disabled Mod
 
-mods.recommend = [accent]MdtX[]Recommended Mods List
-mods.recommend.lastUpdated = Recommended List Last Updated: {0}
-mods.recommend.info = Selected Mods
-mods.recommend.mod.description = Selected Recommended Mod
-mods.recommend.mod.name = Mod: {0}
-mods.recommend.mod.author = Author: {0}
-mods.recommend.mod.minGameVersion = Minimum Supported Game Version: {0}
-mods.recommend.mod.lastUpdated = Last Updated: {0}
-mods.recommend.mod.stars = Github Stars: {0}
-
 alphaLoading = {jump}[gray]Loading...
 alphaLoadFailed = {sick}[gray]Load Failed...
 
 contentSelector = Select Content
-mdtx.report = Report Issue
-mdtx.qqLink = QQ Group
 
-mdtx.share.item = {0}: Stock {1}, Production {2}/s
-mdtx.share.unit = {0}: Count {1}, Limit {2}
 
 commit.recentUpdates = Recent Updates
 commit.title = Commits
@@ -92,10 +78,10 @@ settingV2.coreItems.showPlan.name = Show Building Count
 settingV2.coreItems.showPower.name = Show Power Grid Info
 setting.coreitems.name = Display Core Items (Deprecated, please use V2 settings)
 
-settingV2.AutoUpdate.category = Auto Update
-settingV2.AutoUpdate.showUpdateDialog.name = Show Update Notification
-settingV2.AutoUpdate.ignoreOnce.name = Skip Current Version
-settingV2.AutoUpdate.ignoreUntil.name = Don''t Notify for 7 Days
+settingV2.AutoUpdate.category = Update Checker
+settingV2.AutoUpdate.showUpdateDialog.name = Notify on New Versions
+settingV2.AutoUpdate.ignoreOnce.name = Skip This Version
+settingV2.AutoUpdate.ignoreUntil.name = Snooze for 7 Days
 
 settingV2.quickButtons.category = Quick Buttons
 settingV2.quickButtons.columns.name = Button Columns (Per Row)
@@ -147,10 +133,10 @@ settingV2.maxSchematicSize.name = Max Selection (Schematic) Size
 settingV2.autoSelectSchematic.name = Auto Schematic Select      [gray]Auto-filters when opening schematics
 settingV2.collectMetrics.name = Anonymous Metrics Collection
 settingV2.collectMetrics.description = Anonymously collect crash logs, runtime environment and other information\nTo help developers improve the game
-settingV2.worldCreator.name = World Creator
-settingV2.worldCreator.description = Ignore restrictions, able to place and remove any blocks
+settingV2.worldCreator.name = God Mode Builder
+settingV2.worldCreator.description = Lift placement restrictions; place or remove any block.
 settingV2.terrainSchematic.name = Terrain Schematic
-settingV2.terrainSchematic.description = Allow copying terrain, walls, etc. into schematics, can be pasted with World Creator.
+settingV2.terrainSchematic.description = Copy terrain/walls into schematics; paste them with God Mode Builder.
 
 settingV2.arcExtra.category = ARC - Extended Features
 settingV2.arcExtra.colorizedContent.name = Use colored item names [grey] — may reduce readability
@@ -210,7 +196,7 @@ keybind.overlayUI.name = Toggle OverlayUI
 
 # editor增强
 toolmode.square2 = Square (Diameter)
-toolmode.square2.description = Same as square, but size is diameter (academic feature)
+toolmode.square2.description = Same as square, but size uses diameter (ARC feature)
 #end editor增强
 
 bar.reloadDetail = Reload: {0}%
@@ -278,21 +264,21 @@ setting.unitWeaponRange.name = Unit Weapon Range: Range Warning
 setting.unitWeaponRangeAlpha.name = Unit Weapon Range: Opacity
 setting.unitWeaponTargetLine.name = Unit Weapon Target
 setting.unitbuildplan.name = Units: Build Sequence Display
-settings.arc = Academic Features
+settings.arc = ARC Features
 
 # ARC增加
 bar.drillcantmine = Current drill cannot mine this mineral
 revealedblocks = Revealed Blocks
 rules.aiCoreSpawn = AI Core Spawn
-rules.canGameOver = Can Game Over [gray](If there are no other ways to end the game, not recommended to enable)
-rules.cheat = Cheat Mode (Infinite Firepower)
-rules.coreDestroyClear = Core Destroy Clear Nearby Buildings
+rules.canGameOver = Allow Game Over [gray](If there are no other ways to end the game, not recommended to enable)
+rules.cheat = Cheat
+rules.coreDestroyClear = Clear nearby buildings when a core is destroyed
 rules.disableOutsideArea = Disable Outside Area
-rules.dynamicColor = Fog of War Color - Explored Area [gold]X[]
+rules.dynamicColor = Explored Fog Color [gold]X[]
 rules.infiniteAmmo = Infinite Unit Ammo [gray](Not recommended to disable)
-rules.staticColor = Fog of War Color - Unexplored Area [gold]X[]
+rules.staticColor = Unexplored Fog Color [gold]X[]
 rules.title.arcExperimental = Hidden Settings [red](Experimental features, may affect stability)
-rules.unitPayloadUpdate = Unit Payload Update
+rules.unitPayloadUpdate = Blocks carried by units will operate
 rules.winWave = Win Wave [gold]X[] [gray](Automatically stops after reaching the specified wave)
 schematic.preview = Preview
 settings.maxMsgRecorded.name = Maximum Recorded Messages
